--- a/.github/workflows/pelican.yml
+++ b/.github/workflows/pelican.yml
@@ -17,3 +17,4 @@ jobs:
     - uses: nelsonjchen/gh-pages-pelican-action@0.1.5
       env:
         GITHUB_TOKEN: ${{secrets.GITHUB_TOKEN}}
+        GH_PAGES_CNAME: bugalert.org
