Update workflow creds

--- a/.github/workflows/added_posts.yml
+++ b/.github/workflows/added_posts.yml
@@ -15,16 +15,18 @@ jobs:
     steps:
       - id: files
         uses: jitterbit/get-changed-files@v1
+        env:
+            AWS_ACCESS_KEY_ID:{{ secret.AWS_ACCESS_KEY_ID }}
+            AWS_SECRET_ACCESS_KEY:{{ secret.AWS_SECRET_ACCESS_KEY }}
         with:
           format: 'json'
       - run: |
           apt-get update && apt-get install awscli -y
           aws --version
+          aws sts get-caller-identity
           readarray -t added_files <<<"$(jq -r '.[]' <<<'${{ steps.files.outputs.added }}')"
           for added_file in ${added_files[@]}; do
             if [[ $added_file == content/notices/* ]]; then
               echo "File added: ${added_file}."
             fi
           done
-          export ADDED=${added_files[@]}
-          echo "::set-env name=ADDED::$ADDED"
