--- a/.github/workflows/added_posts.yml
+++ b/.github/workflows/added_posts.yml
@@ -18,6 +18,7 @@ jobs:
         env:
             AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
             AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+            AWS_DOES_THIS_WORK: Yes
         with:
           format: 'json'
       - run: |
