--- a/.github/workflows/added_posts.yml
+++ b/.github/workflows/added_posts.yml
@@ -17,6 +17,7 @@ jobs:
   build:
 
     runs-on: ubuntu-latest
+    environment: bugalert-invoke-lambda
     steps:
       - id: files
         uses: jitterbit/get-changed-files@v1
