Add phone notification

--- a/.github/workflows/added_posts.yml
+++ b/.github/workflows/added_posts.yml
@@ -7,10 +7,9 @@ on:
     branches:
       - main
 env:
-  AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
-  AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-  AWS_DEFAULT_REGION: us-east-1
-  AWS_DEFAULT_OUTPUT: json
+  TEXT_EM_ALL_ID: ${{ secrets.TEXT_EM_ALL_ID }}
+  TEXT_EM_ALL_SECRET: ${{ secrets.TEXT_EM_ALL_SECRET }}
+  TEXT_EM_ALL_TOKEN: ${{ secrets.TEXT_EM_ALL_TOKEN }} 
   GCP_KEY: ${{ secrets.GCP_KEY }}
 
 jobs:
