Push Twitter enablement

--- a/.github/workflows/added_posts.yml
+++ b/.github/workflows/added_posts.yml
@@ -25,7 +25,7 @@ jobs:
           format: 'json'
       - run: |
           ls -ltah "${GITHUB_WORKSPACE}"
-          sudo apt-get update && sudo apt-get install awscli python3-pip -y
+          sudo apt-get update && sudo apt-get install python3-pip -y
           #pip3 install requests==2.26.0 pydub==0.25.1 google-cloud-texttospeech==2.9.0
           pip3 install -Ur "${GITHUB_WORKSPACE}/notice_communication/requirements.txt"
           #aws sts get-caller-identity --region us-east-1
