--- a/.github/workflows/added_posts.yml
+++ b/.github/workflows/added_posts.yml
@@ -11,6 +11,13 @@ env:
   TEXT_EM_ALL_SECRET: ${{ secrets.TEXT_EM_ALL_SECRET }}
   TEXT_EM_ALL_TOKEN: ${{ secrets.TEXT_EM_ALL_TOKEN }} 
   GCP_KEY: ${{ secrets.GCP_KEY }}
+  API_KEY: ${{ secrets.API_KEY }}
+  TWITTER_ACCESS_TOKEN: ${{ secrets.TWITTER_ACCESS_TOKEN }}
+  TWITTER_ACCESS_TOKEN_SECRET: ${{ secrets.TWITTER_ACCESS_TOKEN_SECRET }}
+  TWITTER_BEARER_TOKEN: ${{ secrets.TWITTER_BEARER_TOKEN }}
+  TWITTER_CONSUMER_KEY: ${{ secrets.TWITTER_CONSUMER_KEY }}
+  TWITTER_CONSUMER_SECRET: ${{ secrets.TWITTER_CONSUMER_SECRET }}
+  SENDGRID_API_KEY: ${{ secrets.SENDGRID_API_KEY }}
 
 jobs:
   build:
@@ -26,9 +33,7 @@ jobs:
       - run: |
           ls -ltah "${GITHUB_WORKSPACE}"
           sudo apt-get update && sudo apt-get install python3-pip -y
-          #pip3 install requests==2.26.0 pydub==0.25.1 google-cloud-texttospeech==2.9.0
           pip3 install -Ur "${GITHUB_WORKSPACE}/notice_communication/requirements.txt"
-          #aws sts get-caller-identity --region us-east-1
           readarray -t added_files <<<"$(jq -r '.[]' <<<'${{ steps.files.outputs.added }}')"
           for added_file in ${added_files[@]}; do
             if [[ $added_file == content/notices/* ]]; then
