--- a/subscription_management/requirements.txt
+++ b/subscription_management/requirements.txt
@@ -1,6 +1,6 @@
 requests-oauthlib==1.3.0
 boto3==1.20.26
-email_validator==1.1.3
+#py3-validate-email==1.0.5
 simplejson==3.17.6
 sendgrid==6.9.3
 requests==2.26.0
