--- a/.github/workflows/pelican.yml
+++ b/.github/workflows/pelican.yml
@@ -20,10 +20,7 @@ jobs:
         repository: BugAlertDotOrg/bugalert-pelican
         path: './bugalert-pelican/'
     - run: |
-        ls -ltah .
-        ls -ltah ../
-    - run: |
-        ln -s "${GITHUB_WORKSPACE}/bugalert-pelican/requirements.txt" "${GITHUB_WORKSPACE}/requirements.txt"
+        cp ./bugalert-pelican/requirements.txt .
         sudo apt-get update && sudo apt-get install python3-pip -y 
     - uses: nelsonjchen/gh-pages-pelican-action@0.1.10
       env:
