--- a/.github/workflows/added_posts.yml
+++ b/.github/workflows/added_posts.yml
@@ -36,7 +36,7 @@ jobs:
           pip3 install -Ur "${GITHUB_WORKSPACE}/notice_communication/requirements.txt"
           readarray -t added_files <<<"$(jq -r '.[]' <<<'${{ steps.files.outputs.added }}')"
           for added_file in ${added_files[@]}; do
-            if [[ $added_file == content/temp_disabled_notices/* ]]; then
+            if [[ $added_file == content/notices/* ]]; then
               echo "File added: ${added_file}."
               python3 "${GITHUB_WORKSPACE}/notice_communication/__main__.py" "${added_file}"
             fi
