Support Telegram Notifications

--- a/.github/workflows/added_posts.yml
+++ b/.github/workflows/added_posts.yml
@@ -18,6 +18,7 @@ env:
   TWITTER_CONSUMER_KEY: ${{ secrets.TWITTER_CONSUMER_KEY }}
   TWITTER_CONSUMER_SECRET: ${{ secrets.TWITTER_CONSUMER_SECRET }}
   SENDGRID_API_KEY: ${{ secrets.SENDGRID_API_KEY }}
+  TELEGRAM_API_KEY: ${{ secrets.TELEGRAM_API_KEY }}
 
 jobs:
   build:
