Run added_posts only on new content/notices

--- a/.github/workflows/added_posts.yml
+++ b/.github/workflows/added_posts.yml
@@ -6,6 +6,8 @@ on:
   push:
     branches:
       - main
+    paths:
+     - 'content/notices/*'
 env:
   TEXT_EM_ALL_ID: ${{ secrets.TEXT_EM_ALL_ID }}
   TEXT_EM_ALL_SECRET: ${{ secrets.TEXT_EM_ALL_SECRET }}
