--- a/.github/workflows/added_posts.yml
+++ b/.github/workflows/added_posts.yml
@@ -41,6 +41,7 @@ jobs:
           for added_file in ${added_files[@]}; do
             if [[ $added_file == content/notices/* ]]; then
               echo "File added: ${added_file}."
+              sleep 120
               python3 "${GITHUB_WORKSPACE}/notice_communication/__main__.py" "${added_file}"
             fi
           done
