--- a/subscription_management/requirements.txt
+++ b/subscription_management/requirements.txt
@@ -1,6 +1,5 @@
-requests-oauthlib==1.3.0
-boto3==1.20.26
-#py3-validate-email==1.0.5
+boto3==1.25.4
 simplejson==3.17.6
-sendgrid==6.9.3
-requests==2.26.0
+sendgrid==6.9.7
+requests==2.28.1
+twilio==7.15.0
