--- a/.github/workflows/added_posts.yml
+++ b/.github/workflows/added_posts.yml
@@ -40,7 +40,7 @@ jobs:
           readarray -t added_files <<<"$(jq -r '.[]' <<<'${{ steps.files.outputs.added }}')"
           for added_file in ${added_files[@]}; do
             if [[ $added_file == content/notices/* ]]; then
-              echo "File added: ${added_file}."
+              echo "File added: ${added_file}. Sleeping for two minutes to await the Pelican build."
               sleep 120
               python3 "${GITHUB_WORKSPACE}/notice_communication/__main__.py" "${added_file}"
             fi
